// =====================================================================
//  PetAid — ERD (DBML) for the SWE Assignment 3 report.
//  Paste into https://dbdiagram.io  ( + New  ->  paste )  to render the
//  16-table ERD, then Export -> PNG/SVG/PDF for the report.
//  Mirrors docs/database/schema.sql (the canonical DDL). Every table also
//  has id uuid PK (gen_random_uuid()) + created_at/updated_at timestamptz.
// =====================================================================

Project PetAid {
  database_type: 'PostgreSQL'
  Note: 'First-aid platform. Account is single-table inheritance (role); compositions use UNIQUE FK + CASCADE; Feedback targets a single Resource (0..1).'
}

Table accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  full_name varchar(120) [not null]
  initials varchar(4) [not null]
  is_active boolean [not null]
  email_verified boolean [not null]
  role varchar(40) [not null, note: 'pet_owner | veterinary_expert (STI discriminator)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  indexes { role }
}

Table user_credentials {
  id uuid [pk, default: `gen_random_uuid()`]
  account_id uuid [not null, unique]
  email varchar(255) [not null, unique]
  hashed_password varchar(255) [not null]
  mfa_enabled boolean [not null]
  mfa_secret varchar(64)
  failed_attempts integer [not null]
  locked_until timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Note: '1:1 composition with accounts (only AuthManager reads this).'
}

Table pet_types {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(60) [not null, unique]
  description varchar(240) [not null]
  icon_emoji varchar(8) [not null]
  icon_bg varchar(16) [not null]
  sort_order integer [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table pets {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [not null]
  pet_type_id uuid [not null]
  name varchar(80) [not null]
  breed varchar(80)
  age_years integer [note: 'CHECK: null or 0..80']
  health_notes text [not null]
  image_url text
  icon_emoji varchar(16)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table first_aid_guidance {
  id uuid [pk, default: `gen_random_uuid()`]
  pet_type_id uuid [not null]
  author_id uuid [not null]
  title varchar(160) [not null]
  emergency_type varchar(60) [not null]
  summary text [not null]
  steps jsonb [not null, note: 'ordered list of step strings']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  indexes { emergency_type }
}

Table resources {
  id uuid [pk, default: `gen_random_uuid()`]
  pet_type_id uuid [not null]
  author_id uuid [not null]
  title varchar(160) [not null]
  content_type varchar(20) [not null, note: "CHECK: 'video' | 'pdf' | 'images'"]
  media_path varchar(500)
  status varchar(9) [not null, note: "CHECK: 'draft' | 'published'"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  indexes { status }
}

Table first_aid_resource_link {
  guidance_id uuid [not null]
  resource_id uuid [not null]
  indexes {
    (guidance_id, resource_id) [pk]
    resource_id [name: 'ix_first_aid_resource_link_resource_id']
  }
  Note: 'M:N junction (FirstAidGuidance <-> Resource).'
}

Table quizzes {
  id uuid [pk, default: `gen_random_uuid()`]
  resource_id uuid [not null]
  title varchar(160) [not null]
  passing_score integer [not null]
  questions jsonb [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table quiz_attempts {
  id uuid [pk, default: `gen_random_uuid()`]
  pet_owner_id uuid [not null]
  quiz_id uuid [not null]
  score_pct integer [not null, note: 'CHECK: 0..100']
  passed boolean [not null]
  answers jsonb [not null]
  completed_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table inquiries {
  id uuid [pk, default: `gen_random_uuid()`]
  pet_owner_id uuid [not null]
  assigned_vet_id uuid
  subject varchar(160) [not null]
  question text [not null]
  response text
  image_urls jsonb [not null, default: '[]']
  status varchar(9) [not null, note: "CHECK: 'pending' | 'responded' | 'closed'"]
  submitted_at timestamptz [not null]
  responded_at timestamptz
  closed_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  indexes { status }
}

Table chats {
  id uuid [pk, default: `gen_random_uuid()`]
  pet_owner_id uuid [not null]
  vet_id uuid
  subject varchar(160) [not null]
  status varchar(9) [not null, note: "CHECK: 'initiated' | 'active' | 'closed'"]
  started_at timestamptz [not null]
  ended_at timestamptz
  owner_last_read_at timestamptz
  vet_last_read_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  indexes { status }
}

Table chat_messages {
  id uuid [pk, default: `gen_random_uuid()`]
  chat_id uuid [not null]
  sender_id uuid [not null]
  body text [not null]
  image_url text
  sent_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table donations {
  id uuid [pk, default: `gen_random_uuid()`]
  pet_owner_id uuid [not null]
  amount_cents integer [not null, note: 'CHECK: > 0']
  currency varchar(3) [not null]
  status varchar(9) [not null, note: "CHECK: 'pending' | 'succeeded' | 'failed'"]
  recurring boolean [not null]
  payment_method varchar(40) [note: 'demo label only — card_on_file / ewallet / online_banking']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  indexes { status }
}

Table donation_records {
  id uuid [pk, default: `gen_random_uuid()`]
  donation_id uuid [not null, unique]
  transaction_ref varchar(120) [not null, unique]
  provider varchar(40) [not null]
  amount_cents integer [not null]
  currency varchar(3) [not null]
  final_status varchar(20) [not null]
  processed_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Note: 'Immutable transaction outcome (write-once).'
}

Table feedback {
  id uuid [pk, default: `gen_random_uuid()`]
  submitter_id uuid [not null]
  resource_id uuid [note: 'target Resource (UML 0..1); ON DELETE CASCADE']
  flagged boolean [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  indexes { flagged }
}

Table feedback_entries {
  id uuid [pk, default: `gen_random_uuid()`]
  feedback_id uuid [not null, unique]
  rating integer [not null, note: 'CHECK: 1..5']
  comment text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Note: '1:1 composition with feedback (rating + comment).'
}

// ---- Relationships (FK + ON DELETE behaviour) ----
Ref: user_credentials.account_id - accounts.id [delete: cascade]   // 1:1
Ref: pets.owner_id > accounts.id [delete: cascade]
Ref: pets.pet_type_id > pet_types.id [delete: restrict]
Ref: first_aid_guidance.pet_type_id > pet_types.id [delete: restrict]
Ref: first_aid_guidance.author_id > accounts.id [delete: restrict]
Ref: resources.pet_type_id > pet_types.id [delete: restrict]
Ref: resources.author_id > accounts.id [delete: restrict]
Ref: first_aid_resource_link.guidance_id > first_aid_guidance.id [delete: cascade]
Ref: first_aid_resource_link.resource_id > resources.id [delete: cascade]
Ref: quizzes.resource_id > resources.id [delete: cascade]
Ref: quiz_attempts.pet_owner_id > accounts.id [delete: cascade]
Ref: quiz_attempts.quiz_id > quizzes.id [delete: cascade]
Ref: inquiries.pet_owner_id > accounts.id [delete: cascade]
Ref: inquiries.assigned_vet_id > accounts.id [delete: set null]
Ref: chats.pet_owner_id > accounts.id [delete: cascade]
Ref: chats.vet_id > accounts.id [delete: set null]
Ref: chat_messages.chat_id > chats.id [delete: cascade]
Ref: chat_messages.sender_id > accounts.id [delete: cascade]
Ref: donations.pet_owner_id > accounts.id [delete: cascade]
Ref: donation_records.donation_id - donations.id [delete: cascade]   // 1:1
Ref: feedback.submitter_id > accounts.id [delete: cascade]
Ref: feedback.resource_id > resources.id [delete: cascade]
Ref: feedback_entries.feedback_id - feedback.id [delete: cascade]   // 1:1
